# tensorflow-xla-aot-windows

./: .gitignore  BUILD.bazel  LICENSE  README.md  mnist.cpp  mnist.py  mnist_config.pbtxt
